[gd_scene load_steps=8 format=3 uid="uid://bvvmo4u21fv1e"]

[ext_resource type="Script" path="res://magicShield/magic_shield.gd" id="1_holna"]
[ext_resource type="Texture2D" uid="uid://dtkkafkuqj1mp" path="res://sprites/magicShield/shield-Sheet.png" id="1_u3xtd"]
[ext_resource type="AudioStream" uid="uid://dsy2bnim50yow" path="res://audio/export/magicShield.wav" id="3_gj03h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jk2aj"]
atlas = ExtResource("1_u3xtd")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_re6dh"]
atlas = ExtResource("1_u3xtd")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy8ph"]
atlas = ExtResource("1_u3xtd")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4wxxs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk2aj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re6dh")
}],
"loop": true,
"name": &"active",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy8ph")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="magicShield" type="AnimatedSprite2D"]
light_mask = 2
sprite_frames = SubResource("SpriteFrames_4wxxs")
animation = &"active"
frame = 1
frame_progress = 0.0822913
script = ExtResource("1_holna")

[node name="timeActive" type="Timer" parent="."]

[node name="activeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gj03h")
volume_db = -10.0

[connection signal="timeout" from="timeActive" to="." method="_on_timeout"]
